added comments for better understanding

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat App with Node and html</title>
+    <!-- Adding Socket Files to Setup HTML - Socket Connection  -->
     <script defer src="http://localhost:3300/socket.io/socket.io.js"></script>
+    <!-- JavaScript File  -->
     <script defer src="js/script.js"></script>
+    <!-- Styling css file  -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -14,6 +17,7 @@
         <h1>Welcome to Harsh's Chat App with NodeJs, Html, Css and JavaScript</h1>
     </nav>
 
+    <!-- In this container , we will store all chats. Each chat will shown with className "message". and it's position with their class names - left and right  -->
     <div class="container">
 
     </div>
